project final version 1.1