@@ -9,8 +9,8 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.7'
-    id 'org.beryx.jlink' version '2.22.3'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id "org.beryx.jlink" version "2.22.3"
 
 }
 
@@ -25,9 +25,11 @@ java {
     modularity.inferModulePath.set(true)
 }
 
+
+
 application {
-    mainModule = 'javafx' // name defined in module-info.java
-    mainClass = 'ehu.isad.Main'
+    mainModule = 'oinarria' // name defined in module-info.java
+    mainClass = 'ehu.isad.WhatWebFX'
 }
 
 
@@ -65,8 +67,33 @@ repositories {
     mavenCentral()
 }
 
+
+jlink {
+    addExtraDependencies("javafx")
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'whatwebfx'
+
+        jvmArgs = [
+                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
+        ]
+    }
+
+    jpackage {
+        jpackageHome="/home/duxon/.sdkman/candidates/java/14.0.2.fx-zulu"
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+    }
+}
+
+
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
                 '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
+
+
+
 
 run {
     inputs.property('moduleName', moduleName)
@@ -92,7 +119,7 @@ jlink {
     }
 
     jpackage {
-        jpackageHome = "C:/Program Files/Java/jdk-14.0.2"
+        jpackageHome = "/home/duxon/.sdkman/candidates/java/14.0.2.fx-zulu"
         if (org.gradle.internal.os.OperatingSystem.current().windows) {
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
